# pgc-ufabc

./: LICENSE  README.md
haskell-structures/: MyAVL.hs  MyBST.hs  MyList.hs  MyVector.hs  haskell-structures.cabal
haskell-structures/.liquid/: Lists.hs.cst.html  Lists.hs.html  Lists.hs.json  Lists.hs.smt2  Lists.hs.vim.annot  Memory.hs.cst.html  Memory.hs.html  Memory.hs.json  Memory.hs.smt2  Memory.hs.vim.annot  MyBST.hs.cst.html  MyBST.hs.html  MyBST.hs.json  MyBST.hs.smt2  MyBST.hs.vim.annot  MyList.hs.cst.html  MyList.hs.html  MyList.hs.json  MyList.hs.smt2  MyList.hs.vim.annot  MyVector.hs.cst.html  MyVector.hs.html  MyVector.hs.json  MyVector.hs.smt2  MyVector.hs.vim.annot  SExec.hs.cst.html  SExec.hs.evals.smt2  SExec.hs.html  SExec.hs.json  SExec.hs.smt2  SExec.hs.vim.annot
haskell-structures/.stack-work/: stack.sqlite3
haskell-structures/.stack-work/ghci/6d89f0b4/: cabal_macros.h
haskell-structures/.stack-work/install/x86_64-osx/20ad00536f4a3e0dba6752550b2d08421ccf6d58554b1ff58a840a2681cc409e/8.10.3/pkgdb/: haskell-structures-0.1-2eH5H4JsaNDAly6ThMU14K.conf  package.cache
haskell-structures/.stack-work/odir/: MyBST.hi  MyList.hi  MyVector.hi
haskell-structures/dist-newstyle/cache/: compiler  config
idris-structures/: MyAVL.idr  MyBST.idr  MyList.idr  MyVector.idr
