cabal-version: 2.0
name: haskell-structures
version: 0.1
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: .
  ghc-options: -fplugin=LiquidHaskell
  build-depends:
    liquid-base ^>= 4.14.1.0,
    liquid-containers ^>= 0.6.2.1,
    liquidhaskell ^>= 0.8.10.2
  exposed-modules:
    MyList
    MyVector
    MyBST
    MyAVL
